--- a/cssMemeSlider/style.css
+++ b/cssMemeSlider/style.css
@@ -2,14 +2,16 @@ body {
     background-color: #f6f8fa;
     /* max-width: 1024px; */
     width: 100%;
+    border: #76c8ff 2px solid;
 
 }
 
 .all {
     background: #1F2328;
-    margin: 1rem 2rem;
+    margin: 1rem auto;
     width: 80%;
-    height: 100%;
+    /* height: 100%; */
+    border: #de6c98 2px solid;
 }
 
 #slider {
@@ -194,4 +196,13 @@ a {
 #controls label {
     /*прозрачность стрелок при отводе курсора*/
     transition: opacity 0.2s ease-out;
+}
+
+@media (max-width: 500px) {
+    #active {
+        /*расположение блока с переключателями*/
+        /* margin: 23% 0 0; */
+        text-align: center;
+    }
+
 }
